--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   },
   "homepage": "https://github.com/freshworkstudio/gps-tracking-demo",
   "dependencies": {
+    "body-parser": "latest",
+    "cookie-parser": "latest",
     "express": "^4.13.0",
+	"ejs": "latest",
+	"passport" : "latest",
+    "express-session": "latest",
     "gps-tracking": "^1.0.2",
     "mongodb": "^2.0.35",
+    "path": "^0.12.7",
     "socket.io": "^1.3.5"
   }
 }
